Added other Tile type and worldmap document

--- a/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
+++ b/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollisionTile.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="NormalTile.cs" />
     <Compile Include="Program.cs" />
@@ -82,7 +83,10 @@
     <Content Include="csfml-window-2.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="NormalTile.png">
+    <Content Include="Tile\NormalTile.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="World.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
