--- a/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
+++ b/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
@@ -57,11 +57,19 @@
   <ItemGroup>
     <Compile Include="CollisionTile.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="States\CreditScreen.cs" />
+    <Compile Include="States\GamePlay.cs" />
+    <Compile Include="States\GameStates.cs" />
     <Compile Include="NormalTile.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ProjectRenderWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="States\MainMenu.cs" />
+    <Compile Include="States\PauseMenu.cs" />
+    <Compile Include="States\SplashScreen.cs" />
+    <Compile Include="States\State.cs" />
+    <Compile Include="States\StateMachine.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
@@ -82,9 +90,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="csfml-window-2.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Tile\CollisionTile.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Tile\NormalTile.png">
