--- a/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
+++ b/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CollisionTile.cs" />
+    <Compile Include="CollisionUtil.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="States\CreditScreen.cs" />
     <Compile Include="States\GamePlay.cs" />
