Added ApplicationInterval, Collision update

--- a/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
+++ b/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="CollisionTile.cs" />
     <Compile Include="CollisionUtil.cs" />
+    <Compile Include="MathUtil.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="States\CreditScreen.cs" />
     <Compile Include="States\GamePlay.cs" />
