--- a/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
+++ b/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbstractCommand.cs" />
+    <Compile Include="Animation.cs" />
     <Compile Include="CommandQueue.cs" />
     <Compile Include="EnemyNPC.cs" />
     <Compile Include="QuestNPC.cs" />
@@ -85,6 +86,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Character\CharMove.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Character\EnemyNPC.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
