--- a/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
+++ b/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
@@ -61,6 +61,7 @@
     <Compile Include="EnemyNPC.cs" />
     <Compile Include="QuestNPC.cs" />
     <Compile Include="CollisionTile.cs" />
+    <Compile Include="States\Menu\Button.cs" />
     <Compile Include="UI\UIManager.cs" />
     <Compile Include="Util\CollisionUtil.cs" />
     <Compile Include="Util\Direction.cs" />
@@ -75,7 +76,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="ProjectRenderWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="States\MainMenu.cs" />
+    <Compile Include="States\Menu\MainMenu.cs" />
     <Compile Include="States\PauseMenu.cs" />
     <Compile Include="States\SplashScreen.cs" />
     <Compile Include="States\State.cs" />
@@ -112,6 +113,15 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="csfml-window-2.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="States\Menu\Button.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="States\Menu\ButtonPressed.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="States\Menu\MenuBackground.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Tile\CollisionTile.png">
