--- a/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
+++ b/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
@@ -77,7 +77,7 @@
     <Compile Include="ProjectRenderWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States\Menu\MainMenu.cs" />
-    <Compile Include="States\PauseMenu.cs" />
+    <Compile Include="States\Menu\PauseMenu.cs" />
     <Compile Include="States\SplashScreen.cs" />
     <Compile Include="States\State.cs" />
     <Compile Include="States\StateMachine.cs" />
