--- a/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
+++ b/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Character\AnimationStates.cs" />
+    <Compile Include="Character\Quest.cs" />
     <Compile Include="Commands\Interaction.cs" />
     <Compile Include="Commands\PlayerMover.cs" />
     <Compile Include="Commands\AbstractCommand.cs" />
