--- a/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
+++ b/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1/SFML_Prog2_Gruppe1.csproj
@@ -35,6 +35,14 @@
   <PropertyGroup>
     <StartupObject />
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <PlatformTarget>x86</PlatformTarget>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <PlatformTarget>x86</PlatformTarget>
+    <OutputPath>bin\x86\Release\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="sfmlnet-audio-2">
       <HintPath>C:\Users\Sebastian\Documents\SFML.Net-2.2\lib\sfmlnet-audio-2.dll</HintPath>
@@ -73,9 +81,6 @@
     <Compile Include="WorldSystem\Tile\CollisionTile.cs" />
     <Compile Include="StateMachineSystem\Menu\Button.cs" />
     <Compile Include="StateMachineSystem\UI\UIManager.cs" />
-    <Compile Include="Util\CollisionUtil.cs" />
-    <Compile Include="Util\Direction.cs" />
-    <Compile Include="Util\MathUtil.cs" />
     <Compile Include="CharacterSystem\Player.cs" />
     <Compile Include="WorldSystem\Item.cs" />
     <Compile Include="WorldSystem\Room.cs" />
@@ -85,7 +90,6 @@
     <Compile Include="WorldSystem\Tile\NormalTile.cs" />
     <Compile Include="CharacterSystem\Character.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Util\ProjectRenderWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StateMachineSystem\Menu\MainMenu.cs" />
     <Compile Include="StateMachineSystem\Menu\PauseMenu.cs" />
@@ -283,7 +287,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Util\Util.csproj">
+      <Project>{20612d46-132d-4a0e-b778-6ebb60ed5685}</Project>
+      <Name>Util</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
