Added SFML dlls to Util module

--- a/SFML_Prog2_Gruppe1/Util/Util.csproj
+++ b/SFML_Prog2_Gruppe1/Util/Util.csproj
@@ -66,6 +66,20 @@
     <Compile Include="Util\MathUtil.cs" />
     <Compile Include="Util\ProjectRenderWindow.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="sfmlnet-audio-2.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="sfmlnet-graphics-2.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="sfmlnet-system-2.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="sfmlnet-window-2.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
